chore(api): update SDK makefile and include test targets
