# rust/src/models/visualization_data.rs
@@ -1,0 +1,48 @@
+/*
+ * NativeBPM Engine REST API
+ *
+ * REST API for managing, executing, and monitoring workflows, human tasks, incidents, and outgoing webhooks inside the NativeBPM Cloud-Native engine.  ### Authentication Requests must include a session cookie or a Bearer API token: `Authorization: Bearer <API_TOKEN>` 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct VisualizationData {
+    #[serde(rename = "instance_id")]
+    pub instance_id: String,
+    #[serde(rename = "definition_id")]
+    pub definition_id: String,
+    #[serde(rename = "xml")]
+    pub xml: String,
+    #[serde(rename = "active_nodes")]
+    pub active_nodes: Vec<String>,
+    #[serde(rename = "waiting_nodes")]
+    pub waiting_nodes: Vec<String>,
+    #[serde(rename = "completed_nodes")]
+    pub completed_nodes: Vec<String>,
+    #[serde(rename = "history")]
+    pub history: Vec<models::HistoryRecord>,
+    #[serde(rename = "completed")]
+    pub completed: bool,
+}
+
+impl VisualizationData {
+    pub fn new(instance_id: String, definition_id: String, xml: String, active_nodes: Vec<String>, waiting_nodes: Vec<String>, completed_nodes: Vec<String>, history: Vec<models::HistoryRecord>, completed: bool) -> VisualizationData {
+        VisualizationData {
+            instance_id,
+            definition_id,
+            xml,
+            active_nodes,
+            waiting_nodes,
+            completed_nodes,
+            history,
+            completed,
+        }
+    }
+}
+
