# swift/NativeBPMClient/Classes/OpenAPIs/Models/VisualizationData.swift
@@ -1,0 +1,60 @@
+//
+// VisualizationData.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct VisualizationData: Codable, JSONEncodable, Hashable {
+
+    public var instanceId: String
+    public var definitionId: String
+    public var xml: String
+    public var activeNodes: [String]
+    public var waitingNodes: [String]
+    public var completedNodes: [String]
+    public var history: [HistoryRecord]
+    public var completed: Bool
+
+    public init(instanceId: String, definitionId: String, xml: String, activeNodes: [String], waitingNodes: [String], completedNodes: [String], history: [HistoryRecord], completed: Bool) {
+        self.instanceId = instanceId
+        self.definitionId = definitionId
+        self.xml = xml
+        self.activeNodes = activeNodes
+        self.waitingNodes = waitingNodes
+        self.completedNodes = completedNodes
+        self.history = history
+        self.completed = completed
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case instanceId = "instance_id"
+        case definitionId = "definition_id"
+        case xml
+        case activeNodes = "active_nodes"
+        case waitingNodes = "waiting_nodes"
+        case completedNodes = "completed_nodes"
+        case history
+        case completed
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encode(instanceId, forKey: .instanceId)
+        try container.encode(definitionId, forKey: .definitionId)
+        try container.encode(xml, forKey: .xml)
+        try container.encode(activeNodes, forKey: .activeNodes)
+        try container.encode(waitingNodes, forKey: .waitingNodes)
+        try container.encode(completedNodes, forKey: .completedNodes)
+        try container.encode(history, forKey: .history)
+        try container.encode(completed, forKey: .completed)
+    }
+}
+
