# typescript/src/api/src/models/VisualizationData.ts
@@ -1,0 +1,137 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * NativeBPM Engine REST API
+ * REST API for managing, executing, and monitoring workflows, human tasks, incidents, and outgoing webhooks inside the NativeBPM Cloud-Native engine.  ### Authentication Requests must include a session cookie or a Bearer API token: `Authorization: Bearer <API_TOKEN>` 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { HistoryRecord } from './HistoryRecord';
+import {
+    HistoryRecordFromJSON,
+    HistoryRecordFromJSONTyped,
+    HistoryRecordToJSON,
+    HistoryRecordToJSONTyped,
+} from './HistoryRecord';
+
+/**
+ * 
+ * @export
+ * @interface VisualizationData
+ */
+export interface VisualizationData {
+    /**
+     * 
+     * @type {string}
+     * @memberof VisualizationData
+     */
+    instanceId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof VisualizationData
+     */
+    definitionId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof VisualizationData
+     */
+    xml: string;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof VisualizationData
+     */
+    activeNodes: Array<string>;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof VisualizationData
+     */
+    waitingNodes: Array<string>;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof VisualizationData
+     */
+    completedNodes: Array<string>;
+    /**
+     * 
+     * @type {Array<HistoryRecord>}
+     * @memberof VisualizationData
+     */
+    history: Array<HistoryRecord>;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof VisualizationData
+     */
+    completed: boolean;
+}
+
+/**
+ * Check if a given object implements the VisualizationData interface.
+ */
+export function instanceOfVisualizationData(value: object): value is VisualizationData {
+    if ((!('instanceId' in value) && !('instance_id' in value)) || (value['instanceId'] === undefined && value['instance_id'] === undefined)) return false;
+    if ((!('definitionId' in value) && !('definition_id' in value)) || (value['definitionId'] === undefined && value['definition_id'] === undefined)) return false;
+    if (!('xml' in value) || value['xml'] === undefined) return false;
+    if ((!('activeNodes' in value) && !('active_nodes' in value)) || (value['activeNodes'] === undefined && value['active_nodes'] === undefined)) return false;
+    if ((!('waitingNodes' in value) && !('waiting_nodes' in value)) || (value['waitingNodes'] === undefined && value['waiting_nodes'] === undefined)) return false;
+    if ((!('completedNodes' in value) && !('completed_nodes' in value)) || (value['completedNodes'] === undefined && value['completed_nodes'] === undefined)) return false;
+    if (!('history' in value) || value['history'] === undefined) return false;
+    if (!('completed' in value) || value['completed'] === undefined) return false;
+    return true;
+}
+
+export function VisualizationDataFromJSON(json: any): VisualizationData {
+    return VisualizationDataFromJSONTyped(json, false);
+}
+
+export function VisualizationDataFromJSONTyped(json: any, ignoreDiscriminator: boolean): VisualizationData {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'instanceId': json['instance_id'],
+        'definitionId': json['definition_id'],
+        'xml': json['xml'],
+        'activeNodes': json['active_nodes'],
+        'waitingNodes': json['waiting_nodes'],
+        'completedNodes': json['completed_nodes'],
+        'history': ((json['history'] as Array<any>).map(HistoryRecordFromJSON)),
+        'completed': json['completed'],
+    };
+}
+
+export function VisualizationDataToJSON(json: any): VisualizationData {
+    return VisualizationDataToJSONTyped(json, false);
+}
+
+export function VisualizationDataToJSONTyped(value?: VisualizationData | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'instance_id': value['instanceId'],
+        'definition_id': value['definitionId'],
+        'xml': value['xml'],
+        'active_nodes': value['activeNodes'],
+        'waiting_nodes': value['waitingNodes'],
+        'completed_nodes': value['completedNodes'],
+        'history': ((value['history'] as Array<any>).map(HistoryRecordToJSON)),
+        'completed': value['completed'],
+    };
+}
+
