# typescript/src/api/src/models/index.ts
@@ -12,5 +12,6 @@ export * from './ProcessInstance';
 export * from './ResolveIncident200Response';
 export * from './StartInstanceRequest';
 export * from './TaskRecord';
+export * from './VisualizationData';
 export * from './WebhookDeliveryRecord';
 export * from './WebhookRecord';
